[package]
name = "turboquant"
version = "1.0.0"
edition = "2021"
authors = ["CHECKUPAUTO - Tarek"]
description = "TurboQuant: 3-bit KV Cache compression with PolarQuant + QJL for LLM inference acceleration — 100% Rust"
license = "MIT"
repository = "https://github.com/CHECKUPAUTO/TurboQuant"
keywords = ["llm", "quantization", "kv-cache", "compression", "inference"]
categories = ["science", "algorithms"]

[dependencies]
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
walkdir = "2"
chrono = "0.4"
bytesize = "1"

[[bin]]
name = "turboquant"
path = "src/main.rs"

[[bin]]
name = "turboquant-agent"
path = "src/bin/agent.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
